# starlane-skills

./: .gitignore  AGENTS.md  README.md  README_EN.md  USER_DATA_SPEC.md  pyproject.toml
docs/: ARCHITECTURE.md  ARCHITECTURE_EN.md  CONVENTIONS.md
docs/research/: empirical-analysis-skill-architecture.md  skill-suite-structure-notes.md  starlane-regression-guided-workflow-plan.md  starlane-regression-script-workflow.md
quick-start/: README.md  demo.dta  run_demo.py
quick-start/data-cleaner/: cleaning_plan.json  run_demo.py
quick-start/data-cleaner/raw/: finance.csv  firm_basic.csv
scripts/: build-redskill-release.sh  clean-starlane-regression-runtime.sh  starlane-regression-runtime-status.sh
scripts/redskill-release/: README.md  SKILL.md  build-redskill-release.sh
scripts/stata-code-examples/: README.md  regression_final_output.do
skills/starlane-data-cleaner/: README.md  SKILL.md  pyproject.toml
skills/starlane-data-cleaner/references/: agent-language-style.md  cleaning-plan-schema.md  data-quality-rubric.md  output.md  troubleshooting.md  workflow.md
skills/starlane-data-finder/: SKILL.md  pyproject.toml
skills/starlane-data-finder/agents/: openai.yaml
skills/starlane-data-finder/references/: csmar-mcp.md
skills/starlane-data-finder/scripts/: __init__.py  csmar_client.py  csmar_mcp.py
skills/starlane-data-finder/tests/: test_csmar_client.py  test_csmar_mcp.py
skills/starlane-regression/: README.md  SKILL.md  pyproject.toml
test/: README.md  test_regression_python_backend.py  test_regression_python_env.py
(+51 files in other folders)
