[project]
name = "starlane-data-finder"
version = "0.1.0"
description = "CSMAR MCP prototype for Starlane data collection"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.0,<2",
  "urllib3>=2.0,<3",
]

[project.scripts]
starlane-csmar-mcp = "scripts.csmar_mcp:main"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.uv]
package = true

[dependency-groups]
dev = [
  "pytest>=8.0,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
